--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#?? URL ????
+spring.datasource.url=jdbc:h2:mem:test
+# DB Console ??
+spring.h2.console.enabled=true
+# SQL
+spring.jpa.show-sql=true
+# ??? ??
+spring.jpa.hibernate.ddl-auto=update
 
